ingress-controller/kube-grafana-ingress-ressource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - amardayakube.eastus2.cloudapp.azure.com 
    secretName: grafana-letsencrypt-production
  rules:
  - host: amardayakube.eastus2.cloudapp.azure.com 
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
